# coil_winder

./: AS5600.cpp  AS5600.h  CMakeLists.txt  Keypad.cpp  Keypad.h  L6219.cpp  L6219.h  README.md  Vfd12.cpp  Vfd12.h  main.cpp
